[package]
name = "zplus"
version = "0.9.3-rc.1"
authors = ["Subor Devs <dev-support@playruyi.com>"]

description = "Subor Z+/Ruyi SDK"
homepage = "http://www.playzplus.com/"
repository = "https://github.com/subor/sdk"
readme = "README.md"
keywords = ["subor", "zplus", "ruyi"]
license = "MIT"

[dependencies]
ordered-float = "1.0"
thrift = "0.12"
try_from = "0.2"